--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
